# taal

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
CMakeModules/: LinuxClangToolchain.cmake
data/: CMakeLists.txt
data/shaders/: fullscreen.vert  stars.frag  stars.vert
src/examples/: CMakeLists.txt  skyviewer.cpp
src/taal/: CMakeLists.txt  Config.h.in
src/taal/shading/: ComputeShaderSet.cpp  ComputeShaderSet.h  HDR.cpp  HDR.h  shaderDefs.h
src/taal/sky/: CreateStarCatalog.py  StarCatalog.cpp  StarCatalog.h  StarCatalog.json  StarField.cpp  StarField.h
src/taal/util/: Component.cpp  Component.h  DeviceProperties.cpp  DeviceProperties.h  FrameGraph.cpp  FrameGraph.h  ProcessorGraph.h  math.h
